@@ -2,6 +2,7 @@
   Bugfixes:
   * #1324092: cofs rename replace existing file.
   * #1791993: Ship modules with root as owner and group.
+  * #1853578: memory usage limit: 0 MB on machines with 4 GB RAM.
   * Fix cofs chdir with wildcards on existing upper/lower directory.
   * Don't drop last char from config, if last line no ends with CRLF.
 
